Help msg converted to one string